<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a30000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="138dp"
            android:layout_height="192dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/textView"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/bundar"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/judul"
            android:text="@string/ini_judul"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_marginTop="16dp"
            android:background="@drawable/judul"
            android:text="@string/ini_genre"
            android:textAlignment="center"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignEnd="@+id/textView2"
            android:layout_marginTop="12dp"
            android:background="@drawable/judul"
            android:text="@string/ini_durasi"
            android:textAlignment="center"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignEnd="@+id/textView3"
            android:layout_marginTop="16dp"
            android:background="@drawable/judul"
            android:text="@string/ini_ta_hun"
            android:textAlignment="center"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_item_photo"
            android:layout_alignStart="@+id/img_item_photo"
            android:layout_marginTop="28dp"
            android:layout_toStartOf="@+id/textView4"
            android:text="@string/sinopsis"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.783"
            app:layout_constraintStart_toStartOf="@+id/img_item_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_alignEnd="@+id/textView6"
            android:layout_marginTop="12dp"
            android:background="@drawable/judul"
            android:paddingTop="3dp"
            android:text="@string/isi_isi"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/img_item_photo"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>